Fix some issue bay making purple de background

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 p {
-    background-color: grey;
+    background-color: purple;
     font-size: large;
+    font-family: sans-serif;
+    font-style: oblique;
 }
