Fix issue 3 by making the background green

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 p {
-    background-color: purple;
+    background-color: green;
     font-size: large;
     font-family: sans-serif;
     font-style: oblique;
