Fix issue 12 by adding another things

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 p {
     background-color: green;
     font-size: large;
-    font-family: sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: oblique;
 }
